--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -164,19 +164,29 @@
                 app:layout_constraintStart_toEndOf="@id/chip_bodycare"
                 app:layout_constraintTop_toBottomOf="@id/textview_today_review" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/gray4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/recyclerview_ranking" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_ranking"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingHorizontal="7dp"
+                android:paddingVertical="10dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/chip_haircare"
-                tools:listitem="@layout/item_ranking"
-                tools:itemCount="6"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
-                />
+                tools:itemCount="6"
+                tools:listitem="@layout/item_ranking" />
 
             <ImageView
                 android:id="@+id/footer_bottom_home"
